--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "classnames": "^2.3.2",
+    "framer-motion": "^10.16.4",
+    "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.17.0",
     "vite-plugin-svgr": "^3.2.0"
   },
   "devDependencies": {
